# movements

./: .gitignore  .pre-commit-config.yaml  gunicorn.py  pyproject.toml  setup.cfg
migrations/: env.py
migrations/versions/: 824917f9684f_create_poop_table.py
movements/: database.py  endpoints.py  enums.py  main.py  models.py  settings.py
scripts/: create_database.py
